--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_redux: 0.10.0
   redux: 5.0.0
   shared_preferences: 2.0.15
+  flutter_hooks: 0.18.5+1
 
 dev_dependencies:
   flutter_test:
