--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   redux: 5.0.0
   shared_preferences: 2.0.15
   flutter_hooks: 0.18.5+1
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
