--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: 2.0.15
   flutter_hooks: 0.18.5+1
   qr_flutter: ^4.0.0
+  cloud_firestore: 4.3.0
+  firebase_auth: 4.2.3
 
 dev_dependencies:
   flutter_test:
