--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   qr_flutter: ^4.0.0
   cloud_firestore: 4.3.1
   firebase_auth: 4.2.4
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
